objects/User_PaidHistory__c.object
<CustomObject>
    <fields>
        <fullName>BT_PortalAccessEndDate__c</fullName>
        <label>PortalAccessEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BT_PortalAccessStartDate__c</fullName>
        <label>PortalAccessStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BT_PortalRenuvalDate__c</fullName>
        <label>PortalRenuvalDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BT_id__c</fullName>
        <label>Booth</label>
        <referenceTo>Booth__c</referenceTo>
        <relationshipLabel>User_PaidHistory</relationshipLabel>
        <relationshipName>User_PaidHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BT_paidDate__c</fullName>
        <label>paidDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_PaidDate__c</fullName>
        <label>PaidDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_PortalAccessEndDate__c</fullName>
        <label>PortalAccessEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_PortalAccessStartDate__c</fullName>
        <label>PortalAccessStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_renewal__c</fullName>
        <label>renewal</label>
        <type>Date</type>
    </fields>
    <label>User_PaidHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BT_id__c</columns>
        <columns>BT_paidDate__c</columns>
        <columns>BT_PortalAccessEndDate__c</columns>
        <columns>BT_PortalAccessStartDate__c</columns>
        <columns>BT_PortalRenuvalDate__c</columns>
        <columns>User_PaidDate__c</columns>
        <columns>User_PortalAccessEndDate__c</columns>
        <columns>User_PortalAccessStartDate__c</columns>
        <columns>User_renewal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UPH_{00000000}</displayFormat>
        <label>UPH_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_PaidHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>